--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<!-- index.html will be filled later -->
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+<meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Bloom — твоя краса розквітає тут</title>
+<link href="assets/css/style.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+</head>
+<body>
+<header class="header"><div class="logo"><img src="assets/img/logo.png"></div>
+<nav class="nav">
+<a href="index.html">Головна</a><a href="services.html">Послуги</a>
+<a href="about.html">Про нас</a><a href="founder.html">Про засновницю</a>
+<a href="reviews.html">Відгуки</a><a href="contacts.html">Контакти</a>
+</nav></header>
+<section class="hero fade-in"><h1>Bloom — твоя краса розквітає тут</h1>
+<p class="subtitle">Преміальний салон краси в Києві.</p>
+<div class="hero-buttons">
+<a class="btn-primary" href="#">Записатися в Instagram</a>
+<a class="btn-secondary" href="#">Записатися в Telegram</a>
+</div></section>
+<footer class="footer"><p>© 2025 Bloom Beauty Studio. Капран Вікторія. ФЕМП 3-13. Усі права захищені.</p></footer>
+</body>
+</html>
