--- a/index.html
+++ b/index.html
@@ -1,24 +1,60 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-<meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bloom — твоя краса розквітає тут</title>
-<link href="assets/css/style.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bloom — твоя краса розквітає тут</title>
+    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-<header class="header"><div class="logo"><img src="assets/img/logo.png"></div>
-<nav class="nav">
-<a href="index.html">Головна</a><a href="services.html">Послуги</a>
-<a href="about.html">Про нас</a><a href="founder.html">Про засновницю</a>
-<a href="reviews.html">Відгуки</a><a href="contacts.html">Контакти</a>
-</nav></header>
-<section class="hero fade-in"><h1>Bloom — твоя краса розквітає тут</h1>
-<p class="subtitle">Преміальний салон краси в Києві.</p>
-<div class="hero-buttons">
-<a class="btn-primary" href="#">Записатися в Instagram</a>
-<a class="btn-secondary" href="#">Записатися в Telegram</a>
-</div></section>
-<footer class="footer"><p>© 2025 Bloom Beauty Studio. Капран Вікторія. ФЕМП 3-13. Усі права захищені.</p></footer>
+<header class="header">
+    <div class="logo">
+        <img src="assets/img/logo.png" alt="Bloom logo">
+    </div>
+    <nav class="nav">
+        <a href="index.html" class="active">Головна</a>
+        <a href="services.html">Послуги</a>
+        <a href="about.html">Про нас</a>
+        <a href="founder.html">Про засновницю</a>
+        <a href="reviews.html">Відгуки</a>
+        <a href="contacts.html">Контакти</a>
+    </nav>
+</header>
+<section class="hero fade-in">
+    <h1>Bloom — твоя краса розквітає тут</h1>
+    <p class="subtitle">Преміальний салон краси в Києві. Вишуканість у кожній деталі.</p>
+    <div class="hero-buttons">
+        <a class="btn-primary" href="https://instagram.com/viktoriiyaa.__" target="_blank">Записатися в Instagram</a>
+        <a class="btn-secondary" href="https://t.me/vikto_riiyaa" target="_blank">Записатися в Telegram</a>
+    </div>
+</section>
+<section class="advantages fade-in">
+    <h2>Чому Bloom?</h2>
+    <div class="adv-grid">
+        <div class="adv-item"><h3>5 років досвіду</h3><p>Працюємо з найвибагливішими запитами та гарантуємо якість.</p></div>
+        <div class="adv-item"><h3>15 професійних майстрів</h3><p>Кожен спеціаліст проходить навчання та сертифікацію.</p></div>
+        <div class="adv-item"><h3>Комплекс послуг в один день</h3><p>Манікюр, візаж, зачіска та косметологія — в одному салоні.</p></div>
+        <div class="adv-item"><h3>Преміальний сервіс</h3><p>Комфорт, стерильність та увага до деталей.</p></div>
+    </div>
+</section>
+<section class="section-pink fade-in">
+    <h2>Наші послуги</h2>
+    <p>Оберіть послугу та записуйтеся на зручний час.</p>
+    <div class="service-buttons">
+        <a class="btn-outline" href="services.html">Переглянути прайс</a>
+    </div>
+</section>
+<section class="cta-bar fade-in"><p>Знижка -10% на перший візит</p></section>
+<footer class="footer">
+    <p>© 2025 Bloom Beauty Studio. Капран Вікторія. ФЕМП 3-13. Усі права захищені.</p>
+    <p>Адреса: Київ, вул. Блумська, 1а</p>
+</footer>
+<div class="mobile-cta">
+    <a href="https://instagram.com/viktoriiyaa.__">Instagram</a>
+    <a href="https://t.me/vikto_riiyaa">Telegram</a>
+    <a href="tel:+380953768725">Подзвонити</a>
+</div>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
