--- a/services.html
+++ b/services.html
@@ -1,1 +1,41 @@
-<!-- services full code inserted earlier -->
+<!DOCTYPE html>
+<html lang="uk"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Послуги — Bloom</title>
+<link href="assets/css/style.css" rel="stylesheet"></head>
+<body>
+<header><h1>Bloom — Послуги</h1></header>
+
+<h2>Манікюр</h2>
+<ul>
+<li>Класичний — 450 грн</li>
+<li>Комбінований — 550 грн</li>
+</ul>
+
+<h2>Візаж</h2>
+<ul>
+<li>Денний — 900 грн</li>
+<li>Вечірній — 1200 грн</li>
+</ul>
+
+<h2>Зачіски</h2>
+<ul>
+<li>Укладка — 500 грн</li>
+<li>Локони — 700 грн</li>
+</ul>
+
+<h2>Брови та вії</h2>
+<ul>
+<li>Корекція брів — 250 грн</li>
+<li>Ламінування вій — 800 грн</li>
+</ul>
+
+<h2>Косметологія</h2>
+<ul>
+<li>Ультразвукова чистка — 850 грн</li>
+<li>Пілінг мигдальний — 700 грн</li>
+</ul>
+
+<footer>
+<p>© 2025 Bloom Beauty Studio. Капран Вікторія. ФЕМП 3-13.</p>
+</footer>
+</body></html>
