--- a/about.html
+++ b/about.html
@@ -1,1 +1,99 @@
-<!-- about full code inserted earlier -->
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Про нас — Bloom Beauty Studio</title>
+    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+<header class="header">
+    <div class="logo">
+        <img src="assets/img/logo.png" alt="Bloom logo">
+    </div>
+
+    <nav class="nav">
+        <a href="index.html">Головна</a>
+        <a href="services.html">Послуги</a>
+        <a href="about.html" class="active">Про нас</a>
+        <a href="founder.html">Про засновницю</a>
+        <a href="reviews.html">Відгуки</a>
+        <a href="contacts.html">Контакти</a>
+    </nav>
+</header>
+
+<section class="page-header fade-in">
+    <h1>Про Bloom</h1>
+    <p class="subtitle">Преміальний салон краси з душею та філософією жіночності</p>
+</section>
+
+<section class="about-section fade-in">
+    <h2>Хто ми</h2>
+    <p>
+        Bloom Beauty Studio — це салон, де кожна жінка відчуває турботу, професіоналізм і увагу до деталей. 
+        Ми працюємо вже <strong>5 років</strong> і стали місцем, де краса поєднується з комфортом, 
+        а майстерність — із натхненням.
+    </p>
+
+    <p>
+        У нашій команді — <strong>15 сертифікованих майстрів</strong>, які працюють у різних напрямках: 
+        манікюр, візаж, зачіски, брови та вії, депіляція, косметологія. 
+        Ми вміємо працювати з найскладнішими запитами та створюємо стиль, який підкреслює індивідуальність.
+    </p>
+</section>
+
+<section class="about-section fade-in">
+    <h2>Філософія Bloom</h2>
+    <p>
+        Ми віримо, що краса — це не тільки зовнішність. Це впевненість, гармонія і внутрішнє розквітання.
+        Саме тому наш підхід поєднує преміальний сервіс, естетику та затишок.
+    </p>
+    <p>
+        Bloom — це простір, де кожна жінка може відпочити, відновитися та відчути себе особливою.
+    </p>
+</section>
+
+<section class="section-pink fade-in">
+    <h2>Наші переваги</h2>
+
+    <div class="adv-grid">
+        <div class="adv-item">
+            <h3>Комплексні послуги</h3>
+            <p>Усе в одному місці: макіяж, зачіска, манікюр, брови, косметологія.</p>
+        </div>
+
+        <div class="adv-item">
+            <h3>Професійні майстри</h3>
+            <p>Регулярне навчання, сертифікації та сучасні техніки.</p>
+        </div>
+
+        <div class="adv-item">
+            <h3>Преміальна атмосфера</h3>
+            <p>Комфорт, стерильність, вишуканий дизайн і турбота.</p>
+        </div>
+
+        <div class="adv-item">
+            <h3>Зручність</h3>
+            <p>Легкий запис у Telegram або Instagram та графік 7 днів на тиждень.</p>
+        </div>
+    </div>
+</section>
+
+<footer class="footer">
+    <p>© 2025 Bloom Beauty Studio. Капран Вікторія. ФЕМП 3-13. Усі права захищені.</p>
+    <p>Адреса: Київ, вул. Блумська, 1а</p>
+</footer>
+
+<div class="mobile-cta">
+    <a href="https://instagram.com/viktoriiyaa.__">Instagram</a>
+    <a href="https://t.me/vikto_riiyaa">Telegram</a>
+    <a href="tel:+380953768725">Подзвонити</a>
+</div>
+
+<script src="assets/js/script.js"></script>
+
+</body>
+</html>
