--- a/contacts.html
+++ b/contacts.html
@@ -1,1 +1,77 @@
-<!-- contacts full code inserted earlier -->
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Контакти — Bloom Beauty Studio</title>
+    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+<header class="header">
+    <div class="logo">
+        <img src="assets/img/logo.png" alt="Bloom logo">
+    </div>
+
+    <nav class="nav">
+        <a href="index.html">Головна</a>
+        <a href="services.html">Послуги</a>
+        <a href="about.html">Про нас</a>
+        <a href="founder.html">Про засновницю</a>
+        <a href="reviews.html">Відгуки</a>
+        <a href="contacts.html" class="active">Контакти</a>
+    </nav>
+</header>
+
+<section class="page-header fade-in">
+    <h1>Контакти</h1>
+    <p class="subtitle">Ми завжди поруч — записуйтеся зручно</p>
+</section>
+
+<section class="contacts-section fade-in">
+
+    <div class="contacts-block">
+        <h2>Зв’язатися з нами</h2>
+
+        <p><strong>Телефон:</strong> <a href="tel:+380953768725">+380 95 376 87 25</a></p>
+        <p><strong>Instagram:</strong> <a href="https://instagram.com/viktoriiyaa.__" target="_blank">@viktoriiyaa.__</a></p>
+        <p><strong>Telegram:</strong> <a href="https://t.me/vikto_riiyaa" target="_blank">@vikto_riiyaa</a></p>
+
+        <h3>Адреса</h3>
+        <p>Київ, вул. Блумська, 1а</p>
+
+        <h3>Графік роботи</h3>
+        <p>Щодня з 10:00 до 20:00</p>
+
+        <div class="contact-buttons">
+            <a class="btn-primary" href="https://instagram.com/viktoriiyaa.__" target="_blank">Записатися в Instagram</a>
+            <a class="btn-secondary" href="https://t.me/vikto_riiyaa" target="_blank">Записатися в Telegram</a>
+        </div>
+    </div>
+
+    <div class="map-block">
+        <iframe 
+            src="https://maps.google.com/maps?q=Kiev&t=&z=13&ie=UTF8&iwloc=&output=embed"
+            loading="lazy">
+        </iframe>
+    </div>
+
+</section>
+
+<footer class="footer">
+    <p>© 2025 Bloom Beauty Studio. Капран Вікторія. ФЕМП 3-13. Усі права захищені.</p>
+    <p>Адреса: Київ, вул. Блумська, 1а</p>
+</footer>
+
+<div class="mobile-cta">
+    <a href="https://instagram.com/viktoriiyaa.__">Instagram</a>
+    <a href="https://t.me/vikto_riiyaa">Telegram</a>
+    <a href="tel:+380953768725">Подзвонити</a>
+</div>
+
+<script src="assets/js/script.js"></script>
+
+</body>
+</html>
