--- a/founder.html
+++ b/founder.html
@@ -1,1 +1,81 @@
-<!-- founder full code inserted earlier -->
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Про засновницю — Bloom Beauty Studio</title>
+    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+<header class="header">
+    <div class="logo">
+        <img src="assets/img/logo.png" alt="Bloom logo">
+    </div>
+
+    <nav class="nav">
+        <a href="index.html">Головна</a>
+        <a href="services.html">Послуги</a>
+        <a href="about.html">Про нас</a>
+        <a href="founder.html" class="active">Про засновницю</a>
+        <a href="reviews.html">Відгуки</a>
+        <a href="contacts.html">Контакти</a>
+    </nav>
+</header>
+
+<section class="page-header fade-in">
+    <h1>Про засновницю</h1>
+    <p class="subtitle">Краса починається з любові до своєї справи</p>
+</section>
+
+<section class="founder-section fade-in">
+    <div class="founder-photo">
+        <img src="assets/img/founder.jpg" alt="Засновниця салону Bloom">
+    </div>
+
+    <div class="founder-text">
+        <h2>Капран Вікторія</h2>
+
+        <p>
+            Засновниця Bloom Beauty Studio — місця, де жіночність, професіоналізм 
+            та естетика поєднуються у гармонійний простір для кожної клієнтки.
+        </p>
+
+        <p>
+            Вікторія створила Bloom як студію, в якій жінка може розквітнути, знайти свій стиль 
+            і відчути справжню турботу. За роки роботи вона об’єднала команду з 15 майстрів, 
+            які дотримуються високих стандартів сервісу.
+        </p>
+
+        <p>
+            Її пріоритет — комфорт, якість і природна краса. 
+            Вона вірить, що салон краси — це простір, де не просто роблять послуги, 
+            а створюють емоції, впевненість та внутрішню гармонію.
+        </p>
+
+        <p>
+            Bloom — це сучасна студія преміум-рівня в Києві, 
+            де кожна деталь продумана з любов’ю та натхненням.
+        </p>
+
+        <a class="btn-primary" href="services.html">Переглянути послуги</a>
+    </div>
+</section>
+
+<footer class="footer">
+    <p>© 2025 Bloom Beauty Studio. Капран Вікторія. ФЕМП 3-13. Усі права захищені.</p>
+    <p>Адреса: Київ, вул. Блумська, 1а</p>
+</footer>
+
+<div class="mobile-cta">
+    <a href="https://instagram.com/viktoriiyaa.__">Instagram</a>
+    <a href="https://t.me/vikto_riiyaa">Telegram</a>
+    <a href="tel:+380953768725">Подзвонити</a>
+</div>
+
+<script src="assets/js/script.js"></script>
+
+</body>
+</html>
