--- a/reviews.html
+++ b/reviews.html
@@ -1,1 +1,91 @@
-<!-- reviews full code inserted earlier -->
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Відгуки — Bloom Beauty Studio</title>
+    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+<header class="header">
+    <div class="logo">
+        <img src="assets/img/logo.png" alt="Bloom logo">
+    </div>
+
+    <nav class="nav">
+        <a href="index.html">Головна</a>
+        <a href="services.html">Послуги</a>
+        <a href="about.html">Про нас</a>
+        <a href="founder.html">Про засновницю</a>
+        <a href="reviews.html" class="active">Відгуки</a>
+        <a href="contacts.html">Контакти</a>
+    </nav>
+</header>
+
+<section class="page-header fade-in">
+    <h1>Відгуки</h1>
+    <p class="subtitle">Ті, хто вже розквітнув разом із Bloom</p>
+</section>
+
+<section class="reviews-section fade-in">
+
+    <div class="review-card">
+        <h3>Анастасія</h3>
+        <p>
+            Найкращий салон у Києві! Атмосфера затишна, майстри уважні. 
+            Робила макіяж і зачіску — протрималося до кінця вечора бездоганно.
+        </p>
+    </div>
+
+    <div class="review-card">
+        <h3>Олена</h3>
+        <p>
+            Манікюр завжди на висоті! Дуже подобається стерильність, 
+            якість роботи та естетика всього салону.
+        </p>
+    </div>
+
+    <div class="review-card">
+        <h3>Маргарита</h3>
+        <p>
+            Ходжу на косметологію регулярно. Після чистки та пілінгів шкіра сяє. 
+            Майстер – справжній професіонал!
+        </p>
+    </div>
+
+    <div class="review-card">
+        <h3>Вероніка</h3>
+        <p>
+            Робила укладку — результат тримався навіть наступного дня! 
+            Bloom — це сервіс і атмосфера, які закохують.
+        </p>
+    </div>
+
+    <div class="review-card">
+        <h3>Ірина</h3>
+        <p>
+            Це місце, де дійсно дбають про клієнток. 
+            Завжди приємно повертатися сюди знову.
+        </p>
+    </div>
+
+</section>
+
+<footer class="footer">
+    <p>© 2025 Bloom Beauty Studio. Капран Вікторія. ФЕМП 3-13. Усі права захищені.</p>
+    <p>Адреса: Київ, вул. Блумська, 1а</p>
+</footer>
+
+<div class="mobile-cta">
+    <a href="https://instagram.com/viktoriiyaa.__">Instagram</a>
+    <a href="https://t.me/vikto_riiyaa">Telegram</a>
+    <a href="tel:+380953768725">Подзвонити</a>
+</div>
+
+<script src="assets/js/script.js"></script>
+
+</body>
+</html>
