--- a/about.html
+++ b/about.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Про нас — Bloom Beauty Studio</title>
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Про нас — Bloom Beauty Studio</title>
+<link href="assets/css/style.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
-
 <body>
 
-<header class="header">
+<header class="header" style="padding:35px 70px;">
     <div class="logo">
-        <img src="assets/img/logo.png" alt="Bloom logo">
+        <img src="assets/img/logo.png" alt="Bloom logo" style="height:110px;">
     </div>
-
-    <nav class="nav">
+    <nav class="nav" style="font-size:20px;">
         <a href="index.html">Головна</a>
         <a href="services.html">Послуги</a>
         <a href="about.html" class="active">Про нас</a>
@@ -25,64 +23,62 @@
     </nav>
 </header>
 
-<section class="page-header fade-in">
-    <h1>Про Bloom</h1>
-    <p class="subtitle">Преміальний салон краси з душею та філософією жіночності</p>
+<section class="page-header fade-in" style="padding:160px 90px; max-width:1200px; margin:auto;">
+    <h1 style="font-size:60px; margin-bottom:20px;">Про Bloom</h1>
+    <p class="subtitle" style="font-size:26px;">Преміальний салон краси з душею та філософією жіночності</p>
 </section>
 
-<section class="about-section fade-in">
-    <h2>Хто ми</h2>
-    <p>
-        Bloom Beauty Studio — це салон, де кожна жінка відчуває турботу, професіоналізм і увагу до деталей. 
-        Ми працюємо вже <strong>5 років</strong> і стали місцем, де краса поєднується з комфортом, 
-        а майстерність — із натхненням.
+<section class="about-section fade-in" style="padding:120px 90px; max-width:1200px; margin:auto;">
+    <h2 style="font-size:46px; margin-bottom:35px;">Хто ми</h2>
+    <p style="font-size:24px; margin-bottom:25px;">
+        Bloom Beauty Studio — це місце, де кожна жінка відчуває турботу, професіоналізм та особливу атмосферу. 
+        Ми працюємо вже <strong>5 років</strong>, поєднуючи преміальний сервіс і сучасні б’юті-технології.
     </p>
 
-    <p>
-        У нашій команді — <strong>15 сертифікованих майстрів</strong>, які працюють у різних напрямках: 
-        манікюр, візаж, зачіски, брови та вії, депіляція, косметологія. 
-        Ми вміємо працювати з найскладнішими запитами та створюємо стиль, який підкреслює індивідуальність.
-    </p>
-</section>
-
-<section class="about-section fade-in">
-    <h2>Філософія Bloom</h2>
-    <p>
-        Ми віримо, що краса — це не тільки зовнішність. Це впевненість, гармонія і внутрішнє розквітання.
-        Саме тому наш підхід поєднує преміальний сервіс, естетику та затишок.
-    </p>
-    <p>
-        Bloom — це простір, де кожна жінка може відпочити, відновитися та відчути себе особливою.
+    <p style="font-size:24px; margin-bottom:25px;">
+        У команді Bloom — <strong>15 сертифікованих майстрів</strong>, які працюють у напрямках манікюру, 
+        візажу, зачісок, брів, вій, депіляції та косметології. Ми вміємо працювати з найвибагливішими запитами.
     </p>
 </section>
 
-<section class="section-pink fade-in">
-    <h2>Наші переваги</h2>
+<section class="about-section fade-in" style="padding:120px 90px; max-width:1200px; margin:auto;">
+    <h2 style="font-size:46px; margin-bottom:35px;">Філософія Bloom</h2>
+    <p style="font-size:24px; margin-bottom:25px;">
+        Ми віримо, що краса — це внутрішня гармонія та впевненість. Тому кожна деталь в Bloom створена для того, 
+        щоб ви відчували комфорт, увагу та натхнення.
+    </p>
+    <p style="font-size:24px;">
+        Наш салон — це простір жіночності, де ви можете відпочити, отримати професійний догляд та відчути себе особливою.
+    </p>
+</section>
 
-    <div class="adv-grid">
-        <div class="adv-item">
-            <h3>Комплексні послуги</h3>
-            <p>Усе в одному місці: макіяж, зачіска, манікюр, брови, косметологія.</p>
+<section class="section-pink fade-in" style="padding:140px 90px;">
+    <h2 style="font-size:46px; margin-bottom:40px;">Наші переваги</h2>
+
+    <div class="adv-grid" style="gap:50px; max-width:1200px; margin:auto;">
+        <div class="adv-item" style="padding:35px;">
+            <h3 style="font-size:30px;">Комплексні послуги</h3>
+            <p style="font-size:22px;">Усе в одному місці: макіяж, зачіска, манікюр, брови, косметологія.</p>
         </div>
 
-        <div class="adv-item">
-            <h3>Професійні майстри</h3>
-            <p>Регулярне навчання, сертифікації та сучасні техніки.</p>
+        <div class="adv-item" style="padding:35px;">
+            <h3 style="font-size:30px;">Професійні майстри</h3>
+            <p style="font-size:22px;">Регулярне навчання, сертифікації та сучасні техніки.</p>
         </div>
 
-        <div class="adv-item">
-            <h3>Преміальна атмосфера</h3>
-            <p>Комфорт, стерильність, вишуканий дизайн і турбота.</p>
+        <div class="adv-item" style="padding:35px;">
+            <h3 style="font-size:30px;">Преміальна атмосфера</h3>
+            <p style="font-size:22px;">Комфорт, стерильність, вишуканий дизайн і турбота.</p>
         </div>
 
-        <div class="adv-item">
-            <h3>Зручність</h3>
-            <p>Легкий запис у Telegram або Instagram та графік 7 днів на тиждень.</p>
+        <div class="adv-item" style="padding:35px;">
+            <h3 style="font-size:30px;">Зручність</h3>
+            <p style="font-size:22px;">Запис у Telegram або Instagram та графік 7 днів на тиждень.</p>
         </div>
     </div>
 </section>
 
-<footer class="footer">
+<footer class="footer" style="padding:60px 30px; font-size:18px;">
     <p>© 2025 Bloom Beauty Studio. Капран Вікторія. ФЕМП 3-13. Усі права захищені.</p>
     <p>Адреса: Київ, вул. Блумська, 1а</p>
 </footer>
