--- a/founder.html
+++ b/founder.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Про засновницю — Bloom Beauty Studio</title>
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Про засновницю — Bloom Beauty Studio</title>
+<link href="assets/css/style.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-<header class="header">
+<header class="header" style="padding:35px 70px;">
     <div class="logo">
-        <img src="assets/img/logo.png" alt="Bloom logo">
+        <img src="assets/img/logo.png" alt="Bloom logo" style="height:110px;">
     </div>
-
-    <nav class="nav">
+    <nav class="nav" style="font-size:20px;">
         <a href="index.html">Головна</a>
         <a href="services.html">Послуги</a>
         <a href="about.html">Про нас</a>
@@ -25,46 +24,46 @@
     </nav>
 </header>
 
-<section class="page-header fade-in">
-    <h1>Про засновницю</h1>
-    <p class="subtitle">Краса починається з любові до своєї справи</p>
+<section class="page-header fade-in" style="padding:160px 90px; max-width:1200px; margin:auto;">
+    <h1 style="font-size:60px; margin-bottom:20px;">Про засновницю</h1>
+    <p class="subtitle" style="font-size:26px;">Краса починається з любові до своєї справи</p>
 </section>
 
-<section class="founder-section fade-in">
+<section class="founder-section fade-in" style="padding:140px 90px; max-width:1300px; margin:auto; display:flex; gap:70px; align-items:center;">
     <div class="founder-photo">
-        <img src="assets/img/founder.jpg" alt="Засновниця салону Bloom">
+        <img src="assets/img/founder.jpg" alt="Засновниця салону Bloom" style="width:480px; border-radius:28px; box-shadow:0 6px 18px rgba(0,0,0,0.15);">
     </div>
 
-    <div class="founder-text">
-        <h2>Капран Вікторія</h2>
+    <div class="founder-text" style="max-width:650px;">
+        <h2 style="font-size:46px; margin-bottom:30px;">Капран Вікторія</h2>
 
-        <p>
+        <p style="font-size:24px; margin-bottom:25px;">
             Засновниця Bloom Beauty Studio — місця, де жіночність, професіоналізм 
-            та естетика поєднуються у гармонійний простір для кожної клієнтки.
+            і естетика поєднуються у гармонійний простір для кожної клієнтки.
         </p>
 
-        <p>
-            Вікторія створила Bloom як студію, в якій жінка може розквітнути, знайти свій стиль 
+        <p style="font-size:24px; margin-bottom:25px;">
+            Вікторія створила Bloom як студію, у якій жінка може розквітнути, знайти свій стиль 
             і відчути справжню турботу. За роки роботи вона об’єднала команду з 15 майстрів, 
             які дотримуються високих стандартів сервісу.
         </p>
 
-        <p>
+        <p style="font-size:24px; margin-bottom:25px;">
             Її пріоритет — комфорт, якість і природна краса. 
-            Вона вірить, що салон краси — це простір, де не просто роблять послуги, 
+            Вона вірить, що салон краси — це простір, де не просто роблять процедури, 
             а створюють емоції, впевненість та внутрішню гармонію.
         </p>
 
-        <p>
+        <p style="font-size:24px; margin-bottom:30px;">
             Bloom — це сучасна студія преміум-рівня в Києві, 
             де кожна деталь продумана з любов’ю та натхненням.
         </p>
 
-        <a class="btn-primary" href="services.html">Переглянути послуги</a>
+        <a class="btn-primary" href="services.html" style="padding:18px 40px; font-size:20px;">Переглянути послуги</a>
     </div>
 </section>
 
-<footer class="footer">
+<footer class="footer" style="padding:60px 30px; font-size:18px;">
     <p>© 2025 Bloom Beauty Studio. Капран Вікторія. ФЕМП 3-13. Усі права захищені.</p>
     <p>Адреса: Київ, вул. Блумська, 1а</p>
 </footer>
