--- a/reviews.html
+++ b/reviews.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Відгуки — Bloom Beauty Studio</title>
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Відгуки — Bloom Beauty Studio</title>
+<link href="assets/css/style.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-<header class="header">
+<header class="header" style="padding:35px 70px;">
     <div class="logo">
-        <img src="assets/img/logo.png" alt="Bloom logo">
+        <img src="assets/img/logo.png" alt="Bloom logo" style="height:110px;">
     </div>
-
-    <nav class="nav">
+    <nav class="nav" style="font-size:20px;">
         <a href="index.html">Головна</a>
         <a href="services.html">Послуги</a>
         <a href="about.html">Про нас</a>
@@ -25,47 +24,47 @@
     </nav>
 </header>
 
-<section class="page-header fade-in">
-    <h1>Відгуки</h1>
-    <p class="subtitle">Ті, хто вже розквітнув разом із Bloom</p>
+<section class="page-header fade-in" style="padding:160px 90px; max-width:1200px; margin:auto;">
+    <h1 style="font-size:60px; margin-bottom:20px;">Відгуки</h1>
+    <p class="subtitle" style="font-size:26px;">Ті, хто вже розквітнув разом із Bloom</p>
 </section>
 
-<section class="reviews-section fade-in">
+<section class="reviews-section fade-in" style="padding:120px 90px; max-width:1100px; margin:auto;">
 
-    <div class="review-card">
-        <h3>Анастасія</h3>
+    <div class="review-card" style="padding:40px; margin-bottom:40px; font-size:24px;">
+        <h3 style="font-size:30px; margin-bottom:15px;">Анастасія</h3>
         <p>
             Найкращий салон у Києві! Атмосфера затишна, майстри уважні. 
-            Робила макіяж і зачіску — протрималося до кінця вечора бездоганно.
+            Робила макіяж і зачіску — все трималося до кінця вечора бездоганно.
         </p>
     </div>
 
-    <div class="review-card">
-        <h3>Олена</h3>
+    <div class="review-card" style="padding:40px; margin-bottom:40px; font-size:24px;">
+        <h3 style="font-size:30px; margin-bottom:15px;">Олена</h3>
         <p>
             Манікюр завжди на висоті! Дуже подобається стерильність, 
             якість роботи та естетика всього салону.
         </p>
     </div>
 
-    <div class="review-card">
-        <h3>Маргарита</h3>
+    <div class="review-card" style="padding:40px; margin-bottom:40px; font-size:24px;">
+        <h3 style="font-size:30px; margin-bottom:15px;">Маргарита</h3>
         <p>
             Ходжу на косметологію регулярно. Після чистки та пілінгів шкіра сяє. 
             Майстер – справжній професіонал!
         </p>
     </div>
 
-    <div class="review-card">
-        <h3>Вероніка</h3>
+    <div class="review-card" style="padding:40px; margin-bottom:40px; font-size:24px;">
+        <h3 style="font-size:30px; margin-bottom:15px;">Вероніка</h3>
         <p>
             Робила укладку — результат тримався навіть наступного дня! 
             Bloom — це сервіс і атмосфера, які закохують.
         </p>
     </div>
 
-    <div class="review-card">
-        <h3>Ірина</h3>
+    <div class="review-card" style="padding:40px; margin-bottom:40px; font-size:24px;">
+        <h3 style="font-size:30px; margin-bottom:15px;">Ірина</h3>
         <p>
             Це місце, де дійсно дбають про клієнток. 
             Завжди приємно повертатися сюди знову.
@@ -74,7 +73,7 @@
 
 </section>
 
-<footer class="footer">
+<footer class="footer" style="padding:60px 30px; font-size:18px;">
     <p>© 2025 Bloom Beauty Studio. Капран Вікторія. ФЕМП 3-13. Усі права захищені.</p>
     <p>Адреса: Київ, вул. Блумська, 1а</p>
 </footer>
