--- a/services.html
+++ b/services.html
@@ -1,41 +1,108 @@
 <!DOCTYPE html>
-<html lang="uk"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Послуги — Bloom</title>
-<link href="assets/css/style.css" rel="stylesheet"></head>
+<html lang="uk">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Послуги — Bloom Beauty Studio</title>
+<link href="assets/css/style.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+</head>
+
 <body>
-<header><h1>Bloom — Послуги</h1></header>
 
-<h2>Манікюр</h2>
-<ul>
-<li>Класичний — 450 грн</li>
-<li>Комбінований — 550 грн</li>
-</ul>
+<header class="header" style="padding:35px 70px;">
+    <div class="logo">
+        <img src="assets/img/logo.png" alt="Bloom logo" style="height:110px;">
+    </div>
+    <nav class="nav" style="font-size:20px;">
+        <a href="index.html">Головна</a>
+        <a href="services.html" class="active">Послуги</a>
+        <a href="about.html">Про нас</a>
+        <a href="founder.html">Про засновницю</a>
+        <a href="reviews.html">Відгуки</a>
+        <a href="contacts.html">Контакти</a>
+    </nav>
+</header>
 
-<h2>Візаж</h2>
-<ul>
-<li>Денний — 900 грн</li>
-<li>Вечірній — 1200 грн</li>
-</ul>
+<section class="page-header fade-in" style="padding:160px 90px; max-width:1200px; margin:auto;">
+    <h1 style="font-size:60px; margin-bottom:20px;">Наші послуги</h1>
+    <p class="subtitle" style="font-size:26px;">Преміальний догляд у кожній процедурі</p>
+</section>
 
-<h2>Зачіски</h2>
-<ul>
-<li>Укладка — 500 грн</li>
-<li>Локони — 700 грн</li>
-</ul>
+<!-- MANICURE -->
+<section class="service-section fade-in" style="padding:120px 90px; max-width:1200px; margin:auto;">
+    <h2 style="font-size:46px; margin-bottom:35px;">Манікюр та педикюр</h2>
+    <div class="price-list" style="font-size:24px;">
+        <div class="price-item"><span>Класичний манікюр</span><span>450 грн</span></div>
+        <div class="price-item"><span>Комбінований манікюр</span><span>550 грн</span></div>
+        <div class="price-item"><span>Покриття гель-лаком</span><span>300 грн</span></div>
+        <div class="price-item"><span>Педикюр класичний</span><span>600 грн</span></div>
+    </div>
+</section>
 
-<h2>Брови та вії</h2>
-<ul>
-<li>Корекція брів — 250 грн</li>
-<li>Ламінування вій — 800 грн</li>
-</ul>
+<!-- MAKEUP -->
+<section class="service-section section-pink fade-in" style="padding:120px 90px; max-width:1200px; margin:auto;">
+    <h2 style="font-size:46px; margin-bottom:35px;">Візаж</h2>
+    <div class="price-list" style="font-size:24px;">
+        <div class="price-item"><span>Денний макіяж</span><span>900 грн</span></div>
+        <div class="price-item"><span>Вечірній макіяж</span><span>1200 грн</span></div>
+        <div class="price-item"><span>Макіяж для події</span><span>1500 грн</span></div>
+    </div>
+</section>
 
-<h2>Косметологія</h2>
-<ul>
-<li>Ультразвукова чистка — 850 грн</li>
-<li>Пілінг мигдальний — 700 грн</li>
-</ul>
+<!-- HAIR -->
+<section class="service-section fade-in" style="padding:120px 90px; max-width:1200px; margin:auto;">
+    <h2 style="font-size:46px; margin-bottom:35px;">Зачіски та укладки</h2>
+    <div class="price-list" style="font-size:24px;">
+        <div class="price-item"><span>Укладка</span><span>500 грн</span></div>
+        <div class="price-item"><span>Локони</span><span>700 грн</span></div>
+        <div class="price-item"><span>Вечірня зачіска</span><span>1200 грн</span></div>
+    </div>
+</section>
 
-<footer>
-<p>© 2025 Bloom Beauty Studio. Капран Вікторія. ФЕМП 3-13.</p>
+<!-- BROWS & LASHES -->
+<section class="service-section section-pink fade-in" style="padding:120px 90px; max-width:1200px; margin:auto;">
+    <h2 style="font-size:46px; margin-bottom:35px;">Брови та вії</h2>
+    <div class="price-list" style="font-size:24px;">
+        <div class="price-item"><span>Корекція брів</span><span>250 грн</span></div>
+        <div class="price-item"><span>Фарбування брів</span><span>300 грн</span></div>
+        <div class="price-item"><span>Ламінування вій</span><span>800 грн</span></div>
+    </div>
+</section>
+
+<!-- COSMETOLOGY -->
+<section class="service-section fade-in" style="padding:120px 90px; max-width:1200px; margin:auto;">
+    <h2 style="font-size:46px; margin-bottom:35px;">Косметологія</h2>
+    <div class="price-list" style="font-size:24px;">
+        <div class="price-item"><span>Ультразвукова чистка</span><span>850 грн</span></div>
+        <div class="price-item"><span>Мигдальний пілінг</span><span>700 грн</span></div>
+        <div class="price-item"><span>Доглядова процедура</span><span>600 грн</span></div>
+    </div>
+</section>
+
+<section class="section-pink fade-in" style="padding:140px 90px; text-align:center;">
+    <h2 style="font-size:46px; margin-bottom:25px;">Готові записатися?</h2>
+    <p style="font-size:24px; margin-bottom:40px;">-10% на перший візит для нових клієнток</p>
+    <a class="btn-primary" 
+       href="https://instagram.com/viktoriiyaa.__" 
+       target="_blank"
+       style="font-size:20px; padding:18px 40px;">
+       Записатися в Instagram
+    </a>
+</section>
+
+<footer class="footer" style="padding:60px 30px; font-size:18px;">
+    <p>© 2025 Bloom Beauty Studio. Капран Вікторія. ФЕМП 3-13. Усі права захищені.</p>
+    <p>Адреса: Київ, вул. Блумська, 1а</p>
 </footer>
-</body></html>
+
+<div class="mobile-cta">
+    <a href="https://instagram.com/viktoriiyaa.__">Instagram</a>
+    <a href="https://t.me/vikto_riiyaa">Telegram</a>
+    <a href="tel:+380953768725">Подзвонити</a>
+</div>
+
+<script src="assets/js/script.js"></script>
+
+</body>
+</html>
