--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
-<header class="header">
+
+<header class="header" style="padding:35px 70px;">
     <div class="logo">
-        <img src="assets/img/logo.png" alt="Bloom logo">
+        <img src="assets/img/logo.png" alt="Bloom logo" style="height:110px;">
     </div>
-    <nav class="nav">
+
+    <nav class="nav" style="font-size:20px;">
         <a href="index.html" class="active">Головна</a>
         <a href="services.html">Послуги</a>
         <a href="about.html">Про нас</a>
@@ -21,40 +24,66 @@
         <a href="contacts.html">Контакти</a>
     </nav>
 </header>
-<section class="hero fade-in">
-    <h1>Bloom — твоя краса розквітає тут</h1>
-    <p class="subtitle">Преміальний салон краси в Києві. Вишуканість у кожній деталі.</p>
-    <div class="hero-buttons">
-        <a class="btn-primary" href="https://instagram.com/viktoriiyaa.__" target="_blank">Записатися в Instagram</a>
-        <a class="btn-secondary" href="https://t.me/vikto_riiyaa" target="_blank">Записатися в Telegram</a>
+
+<section class="hero fade-in" style="padding:180px 90px; max-width:1200px; margin:auto;">
+    <h1 style="font-size:64px; margin-bottom:25px;">Bloom — твоя краса розквітає тут</h1>
+    <p class="subtitle" style="font-size:26px;">Преміальний салон краси в Києві. Вишуканість у кожній деталі.</p>
+
+    <div class="hero-buttons" style="margin-top:50px; gap:35px;">
+        <a class="btn-primary" href="https://instagram.com/viktoriiyaa.__" target="_blank" style="padding:18px 40px; font-size:20px;">Записатися в Instagram</a>
+        <a class="btn-secondary" href="https://t.me/vikto_riiyaa" target="_blank" style="padding:18px 40px; font-size:20px;">Записатися в Telegram</a>
     </div>
 </section>
-<section class="advantages fade-in">
-    <h2>Чому Bloom?</h2>
-    <div class="adv-grid">
-        <div class="adv-item"><h3>5 років досвіду</h3><p>Працюємо з найвибагливішими запитами та гарантуємо якість.</p></div>
-        <div class="adv-item"><h3>15 професійних майстрів</h3><p>Кожен спеціаліст проходить навчання та сертифікацію.</p></div>
-        <div class="adv-item"><h3>Комплекс послуг в один день</h3><p>Манікюр, візаж, зачіска та косметологія — в одному салоні.</p></div>
-        <div class="adv-item"><h3>Преміальний сервіс</h3><p>Комфорт, стерильність та увага до деталей.</p></div>
+
+<section class="advantages fade-in" style="padding:120px 90px; max-width:1200px; margin:auto;">
+    <h2 style="font-size:46px; margin-bottom:40px;">Чому Bloom?</h2>
+
+    <div class="adv-grid" style="gap:50px;">
+        <div class="adv-item" style="padding:35px;">
+            <h3 style="font-size:30px;">5 років досвіду</h3>
+            <p style="font-size:22px;">Працюємо з найвибагливішими запитами та гарантуємо якість.</p>
+        </div>
+
+        <div class="adv-item" style="padding:35px;">
+            <h3 style="font-size:30px;">15 професійних майстрів</h3>
+            <p style="font-size:22px;">Кожен спеціаліст проходить навчання та сертифікацію.</p>
+        </div>
+
+        <div class="adv-item" style="padding:35px;">
+            <h3 style="font-size:30px;">Комплекс послуг в один день</h3>
+            <p style="font-size:22px;">Манікюр, візаж, зачіска та косметологія — в одному салоні.</p>
+        </div>
+
+        <div class="adv-item" style="padding:35px;">
+            <h3 style="font-size:30px;">Преміальний сервіс</h3>
+            <p style="font-size:22px;">Комфорт, стерильність та увага до деталей.</p>
+        </div>
     </div>
 </section>
-<section class="section-pink fade-in">
-    <h2>Наші послуги</h2>
-    <p>Оберіть послугу та записуйтеся на зручний час.</p>
-    <div class="service-buttons">
-        <a class="btn-outline" href="services.html">Переглянути прайс</a>
-    </div>
+
+<section class="section-pink fade-in" style="padding:130px 90px; text-align:center;">
+    <h2 style="font-size:46px; margin-bottom:25px;">Наші послуги</h2>
+    <p style="font-size:24px; margin-bottom:50px;">Оберіть послугу та записуйтеся на зручний час.</p>
+
+    <a class="btn-outline" href="services.html" style="font-size:20px; padding:18px 40px;">Переглянути прайс</a>
 </section>
-<section class="cta-bar fade-in"><p>Знижка -10% на перший візит</p></section>
-<footer class="footer">
+
+<section class="cta-bar fade-in" style="padding:80px 0; text-align:center; background:#fff;">
+    <p style="font-size:32px; font-weight:600; color:#e77ab6;">-10% на перший візит</p>
+</section>
+
+<footer class="footer" style="padding:60px 30px; font-size:18px;">
     <p>© 2025 Bloom Beauty Studio. Капран Вікторія. ФЕМП 3-13. Усі права захищені.</p>
     <p>Адреса: Київ, вул. Блумська, 1а</p>
 </footer>
+
 <div class="mobile-cta">
     <a href="https://instagram.com/viktoriiyaa.__">Instagram</a>
     <a href="https://t.me/vikto_riiyaa">Telegram</a>
     <a href="tel:+380953768725">Подзвонити</a>
 </div>
+
 <script src="assets/js/script.js"></script>
+
 </body>
 </html>
