--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
 
 <section class="hero fade-in" style="padding:180px 90px; max-width:1200px; margin:auto;">
     <h1 style="font-size:64px; margin-bottom:25px;">Bloom — твоя краса розквітає тут</h1>
-    <p class="subtitle" style="font-size:26px;">Преміальний салон краси в Києві. Вишуканість у кожній деталі.</p>
+    <p class="subtitle" style="font-size:26px;">
+        Преміальний салон краси в Києві для жінок, які цінують якість, увагу до деталей та естетику.
+    </p>
 
-    <div class="hero-buttons" style="margin-top:50px; gap:35px;">
-        <a class="btn-primary" href="https://instagram.com/viktoriiyaa.__" target="_blank" style="padding:18px 40px; font-size:20px;">Записатися в Instagram</a>
-        <a class="btn-secondary" href="https://t.me/vikto_riiyaa" target="_blank" style="padding:18px 40px; font-size:20px;">Записатися в Telegram</a>
+    <div class="hero-buttons" style="margin-top:50px; display:flex; justify-content:flex-start; gap:35px; flex-wrap:wrap;">
+        <a class="btn-primary" href="https://instagram.com/viktoriiyaa.__" target="_blank" style="padding:18px 40px; font-size:20px;">
+            Записатися в Instagram
+        </a>
+        <a class="btn-secondary" href="https://t.me/vikto_riiyaa" target="_blank" style="padding:18px 40px; font-size:20px;">
+            Записатися в Telegram
+        </a>
     </div>
 </section>
 
@@ -41,35 +47,41 @@
     <div class="adv-grid" style="gap:50px;">
         <div class="adv-item" style="padding:35px;">
             <h3 style="font-size:30px;">5 років досвіду</h3>
-            <p style="font-size:22px;">Працюємо з найвибагливішими запитами та гарантуємо якість.</p>
+            <p style="font-size:22px;">Ми вже п’ять років створюємо красу для клієнток у Києві.</p>
         </div>
 
         <div class="adv-item" style="padding:35px;">
             <h3 style="font-size:30px;">15 професійних майстрів</h3>
-            <p style="font-size:22px;">Кожен спеціаліст проходить навчання та сертифікацію.</p>
+            <p style="font-size:22px;">Команда сертифікованих спеціалістів у різних напрямах б’юті.</p>
         </div>
 
         <div class="adv-item" style="padding:35px;">
             <h3 style="font-size:30px;">Комплекс послуг в один день</h3>
-            <p style="font-size:22px;">Манікюр, візаж, зачіска та косметологія — в одному салоні.</p>
+            <p style="font-size:22px;">Манікюр, макіяж, зачіска, брови та косметологія в одному просторі.</p>
         </div>
 
         <div class="adv-item" style="padding:35px;">
-            <h3 style="font-size:30px;">Преміальний сервіс</h3>
-            <p style="font-size:22px;">Комфорт, стерильність та увага до деталей.</p>
+            <h3 style="font-size:30px;">Преміальна атмосфера</h3>
+            <p style="font-size:22px;">Затишок, естетика, стерильність та турбота про кожну клієнтку.</p>
         </div>
     </div>
 </section>
 
 <section class="section-pink fade-in" style="padding:130px 90px; text-align:center;">
-    <h2 style="font-size:46px; margin-bottom:25px;">Наші послуги</h2>
-    <p style="font-size:24px; margin-bottom:50px;">Оберіть послугу та записуйтеся на зручний час.</p>
+    <h2 style="font-size:46px; margin-bottom:25px;">Послуги салону</h2>
+    <p style="font-size:24px; margin-bottom:50px;">
+        Від щоденного догляду до образу для особливої події — ми подбаємо про все.
+    </p>
 
-    <a class="btn-outline" href="services.html" style="font-size:20px; padding:18px 40px;">Переглянути прайс</a>
+    <a class="btn-outline" href="services.html" style="font-size:20px; padding:18px 40px;">
+        Переглянути прайс
+    </a>
 </section>
 
 <section class="cta-bar fade-in" style="padding:80px 0; text-align:center; background:#fff;">
-    <p style="font-size:32px; font-weight:600; color:#e77ab6;">-10% на перший візит</p>
+    <p style="font-size:32px; font-weight:600; color:#e77ab6;">
+        -10% на перший візит для нових клієнток
+    </p>
 </section>
 
 <footer class="footer" style="padding:60px 30px; font-size:18px;">
